--- a/ccContact.html
+++ b/ccContact.html
@@ -18,17 +18,16 @@
 	<header>
 	</header>
 	<section class="mainContent">
-	<p> some content displayed here</p>
-		<p>
+	<p class="contact"> Interested In working together? <span  id="contactMe">Contact me.</span></p>
+		
 			<form>
-				First Name: <input type="text" name="firstname">
-				Last Name: <input type="text" name="lastname">
-				Email: <input type="text" name="email">
-				Subject: <input type="text" name="subject">
-				Content <input type="text" name="content">
+				First Name: <input class="fromInput" type="text" name="firstname">
+				Last Name: <input class="fromInput" type="text" name="lastname">
+				Email: <input class="fromInput" type="text" name="subject">
+				Content <input class="fromInput" type="text" name="content">
 				<input class="button" type="submit" value="Submit">
 			</form>
-		</p>
+		
 	</section>
 </div>
 	<footer></footer>
