--- a/ccIndex.html
+++ b/ccIndex.html
@@ -18,9 +18,25 @@
 	<header>
 	</header>
 	<section class="mainContent">
+		<div class="innerContent">
 		<p class="maincontent"><span id="hello">Hello, I'm Carlye.</span> I'm so glad you're here. I am a content creator and front end web developer. I specialize in creating clear content and clean design. </p>
+		<img src="images/carlyecunniff.jpg" alt="Picture of Carlye Cunniff" title="Carlye Cunniff">
+		<p class="getToKnow"> Get to know me.</p>
+		<div class="littleHistory">
+		<p>I danced for several years  and still enjoy a twirl or two.</p>
+		<p> My passions are traveling, dancing, writing and designing.</p>
+		</div>
+	   </div>
 	</section>
+	<section class="portfolio">
+		<input class="buttonLeft" type="submit" value="<">
+	       <p id="portfolio"> <a href="#">Portfolio Image/link</a></p>
+		<input class="buttonRight" type="submit" value=">">
+	</section>
+	<footer>
+			
+	
+	</footer>
 </div>
-	<footer></footer>
 </body>
 </html>
