--- a/ccContact.html
+++ b/ccContact.html
@@ -18,8 +18,8 @@
 	<header>
 	</header>
 	<section class="mainContent">
+	<div class="innerContent">
 	<p class="contact"> Interested In working together? <span  id="contactMe">Contact me.</span></p>
-		
 			<form>
 				First Name: <input class="fromInput" type="text" name="firstname">
 				Last Name: <input class="fromInput" type="text" name="lastname">
@@ -27,7 +27,7 @@
 				Content <input class="fromInput" type="text" name="content">
 				<input class="button" type="submit" value="Submit">
 			</form>
-		
+		</div>
 	</section>
 </div>
 	<footer></footer>
